--- a/CLIENT/eCommerceSystem/package.json
+++ b/CLIENT/eCommerceSystem/package.json
@@ -32,6 +32,7 @@
     "firebase": "^9.6.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fbsdk-next": "^12.1.2",
