--- a/CLIENT/eCommerceSystem/package.json
+++ b/CLIENT/eCommerceSystem/package.json
@@ -30,6 +30,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.6.11",
+    "moment-timezone": "^0.5.45",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
