--- a/CLIENT/eCommerceSystem/package.json
+++ b/CLIENT/eCommerceSystem/package.json
@@ -38,6 +38,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fbsdk-next": "^12.1.2",
     "react-native-gifted-charts": "^1.3.32",
+    "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
